# appz_hosting

./: README.md  pyproject.toml  requirements.txt  setup.py
appz_hosting/: hooks.py  install.py  modules.txt
appz_hosting/appz_hosting/: __init__.py
appz_hosting/appz_hosting/doctype/app_template/: app_template.json  app_template.py
appz_hosting/appz_hosting/doctype/appz_server/: __init__.py  appz_server.json  appz_server.py
appz_hosting/appz_hosting/doctype/client/: client.json  client.py
appz_hosting/appz_hosting/doctype/client_automation/: client_automation.json  client_automation.py
appz_hosting/appz_hosting/doctype/client_site/: client_site.json  client_site.py
appz_hosting/appz_hosting/doctype/customer_server/: customer_server.json  customer_server.py
appz_hosting/appz_hosting/doctype/deployed_app/: deployed_app.json  deployed_app.py
appz_hosting/appz_hosting/doctype/deployment_template/: __init__.py  deployment_template.json  deployment_template.py
appz_hosting/appz_hosting/doctype/hosted_service/: __init__.py  hosted_service.json  hosted_service.py
appz_hosting/appz_hosting/doctype/server_plan/: server_plan.json  server_plan.py
appz_hosting/appz_hosting/doctype/service_backup/: __init__.py  (+2 more)
appz_hosting/core/: __init__.py  ai_advisor.py  backup.py  caddy.py  clickstack.py  client_events.py  deployer.py  events.py  monitoring.py  provisioner.py  service.py
appz_hosting/templates/: registry.json
appz_hosting/www/: __init__.py  my-services.html  my-services.py  request-service.html  request-service.py  services.html  services.py
(+19 files in other folders)
